unpackaged/main/default/objects/Lead/fields/Additional_Notes__c.field-meta.xml
<CustomField>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>