unpackaged/main/default/objects/Lead/fields/Appt_No_Show_Cancel_Reason__c.field-meta.xml
<CustomField>
        <fullName>Appt_No_Show_Cancel_Reason__c</fullName>
        <label>Appt No Show/Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>