unpackaged/main/default/objects/Lead/fields/Are_you_transferring_to_the_area__c.field-meta.xml
<CustomField>
        <fullName>Are_you_transferring_to_the_area__c</fullName>
        <inlineHelpText>If transferring to the area, enter transfer date.</inlineHelpText>
        <label>Are you transferring to the area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>