unpackaged/main/default/objects/Lead/fields/Assigned_Sales_Assistants__c.field-meta.xml
<CustomField>
        <fullName>Assigned_Sales_Assistants__c</fullName>
        <label>Assigned Sales Assistants</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alexis Hall</fullName>
                </value>
                <value>
                    <fullName>Amy Franks</fullName>
                </value>
                <value>
                    <fullName>Cathy Chadwick</fullName>
                </value>
                <value>
                    <fullName>Chandler Meadows</fullName>
                </value>
                <value>
                    <fullName>Diane Tidwell</fullName>
                </value>
                <value>
                    <fullName>Deborah Powell</fullName>
                </value>
                <value>
                    <fullName>Gina Iaccino</fullName>
                </value>
                <value>
                    <fullName>Jill Brodsky</fullName>
                </value>
                <value>
                    <fullName>Melissa Stein</fullName>
                </value>
                <value>
                    <fullName>Paige Kamel</fullName>
                </value>
                <value>
                    <fullName>Randy Perry</fullName>
                </value>
                <value>
                    <fullName>Rauly Williams</fullName>
                </value>
                <value>
                    <fullName>Sue Walker</fullName>
                </value>
                <value>
                    <fullName>Tonya McKim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>