unpackaged/main/default/objects/Lead/fields/Bedrooms__c.field-meta.xml
<CustomField>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>