unpackaged/main/default/objects/Lead/fields/Block__c.field-meta.xml
<CustomField>
        <fullName>Block__c</fullName>
        <label>Block</label>
        <type>TextArea</type>
    </CustomField>