unpackaged/main/default/objects/Lead/fields/Builder__c.field-meta.xml
<CustomField>
        <fullName>Builder__c</fullName>
        <label>Builder</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>