unpackaged/main/default/objects/Lead/fields/Builder_of_Interest__c.field-meta.xml
<CustomField>
        <fullName>Builder_of_Interest__c</fullName>
        <label>Builder of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Builders</fullName>
                </value>
                <value>
                    <fullName>AVI Homes</fullName>
                </value>
                <value>
                    <fullName>Brohn Homes</fullName>
                </value>
                <value>
                    <fullName>Brookfield Residential</fullName>
                </value>
                <value>
                    <fullName>Buffington Homes</fullName>
                </value>
                <value>
                    <fullName>Castle Rock Communities</fullName>
                </value>
                <value>
                    <fullName>David Weekley Homes</fullName>
                </value>
                <value>
                    <fullName>Dream Finders Homes</fullName>
                </value>
                <value>
                    <fullName>Experience Park</fullName>
                </value>
                <value>
                    <fullName>Highland Homes</fullName>
                </value>
                <value>
                    <fullName>Milestone Community Builders</fullName>
                </value>
                <value>
                    <fullName>MX3 Homes</fullName>
                </value>
                <value>
                    <fullName>Newleaf Homes</fullName>
                </value>
                <value>
                    <fullName>Pacesetter Homes</fullName>
                </value>
                <value>
                    <fullName>Perry Homes</fullName>
                </value>
                <value>
                    <fullName>Taylor Morrison</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>