unpackaged/main/default/objects/Lead/fields/CaseSafeId__c.field-meta.xml
<CustomField>
        <fullName>CaseSafeId__c</fullName>
        <formula>CaseSafeId(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeId</label>
        <type>Text</type>
    </CustomField>