unpackaged/main/default/objects/Lead/fields/CoBuyerFirstName__c.field-meta.xml
<CustomField>
        <fullName>CoBuyerFirstName__c</fullName>
        <label>Co Buyer First Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>