unpackaged/main/default/objects/Lead/fields/CoBuyerLastName__c.field-meta.xml
<CustomField>
        <fullName>CoBuyerLastName__c</fullName>
        <label>Co Buyer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>