unpackaged/main/default/objects/Lead/fields/Community_History_Aus__c.field-meta.xml
<CustomField>
        <fullName>Community_History_Aus__c</fullName>
        <label>Community History Aus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Aus</valueSetName>
        </valueSet>
    </CustomField>