unpackaged/main/default/objects/Lead/fields/Community_History_Den__c.field-meta.xml
<CustomField>
        <fullName>Community_History_Den__c</fullName>
        <label>Community History Den</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Den</valueSetName>
        </valueSet>
    </CustomField>