unpackaged/main/default/objects/Lead/fields/Community_List_Cal__c.field-meta.xml
<CustomField>
        <fullName>Community_List_Cal__c</fullName>
        <label>Community List Cal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Cal</valueSetName>
        </valueSet>
    </CustomField>