unpackaged/main/default/objects/Lead/fields/Community_List_Edm__c.field-meta.xml
<CustomField>
        <fullName>Community_List_Edm__c</fullName>
        <label>Community List Edm</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Edm</valueSetName>
        </valueSet>
    </CustomField>