unpackaged/main/default/objects/Lead/fields/Community_List_NorCal__c.field-meta.xml
<CustomField>
        <fullName>Community_List_NorCal__c</fullName>
        <label>Community List NorCal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_NorCal</valueSetName>
        </valueSet>
    </CustomField>