unpackaged/main/default/objects/Lead/fields/Community_Picklist_Cal__c.field-meta.xml
<CustomField>
        <fullName>Community_Picklist_Cal__c</fullName>
        <label>Community Picklist Cal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Cal</valueSetName>
        </valueSet>
    </CustomField>