unpackaged/main/default/objects/Lead/fields/Community_Text__c.field-meta.xml
<CustomField>
        <fullName>Community_Text__c</fullName>
        <description>To hold the community information from the web to lead form</description>
        <label>Community Interested In</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>