unpackaged/main/default/objects/Lead/fields/Consent_Expiry_Date__c.field-meta.xml
<CustomField>
        <fullName>Consent_Expiry_Date__c</fullName>
        <label>Consent Expiry Date</label>
        <type>Date</type>
    </CustomField>