unpackaged/main/default/objects/Lead/fields/Consent_Notes__c.field-meta.xml
<CustomField>
        <fullName>Consent_Notes__c</fullName>
        <label>Consent Notes</label>
        <type>TextArea</type>
    </CustomField>