unpackaged/main/default/objects/Lead/fields/Consent_Revoked_Date__c.field-meta.xml
<CustomField>
        <fullName>Consent_Revoked_Date__c</fullName>
        <label>Consent Revoked Date</label>
        <type>Date</type>
    </CustomField>