unpackaged/main/default/objects/Lead/fields/Consent_to_Follow_Up__c.field-meta.xml
<CustomField>
        <fullName>Consent_to_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent to Follow Up</label>
        <type>Checkbox</type>
    </CustomField>