unpackaged/main/default/objects/Lead/fields/Consent_Type__c.field-meta.xml
<CustomField>
        <fullName>Consent_Type__c</fullName>
        <label>Consent Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Type</valueSetName>
        </valueSet>
    </CustomField>