unpackaged/main/default/objects/Lead/fields/Contact_Preference__c.field-meta.xml
<CustomField>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Text Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>