unpackaged/main/default/objects/Lead/fields/Converted_From_Lead__c.field-meta.xml
<CustomField>
        <fullName>Converted_From_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Converted From Lead</label>
        <type>Checkbox</type>
    </CustomField>