unpackaged/main/default/objects/Lead/fields/Est_Purchase_Date__c.field-meta.xml
<CustomField>
        <fullName>Est_Purchase_Date__c</fullName>
        <label>Est Purchase Date</label>
        <type>Date</type>
    </CustomField>