unpackaged/main/default/objects/Lead/fields/Estimated_Purchase_Price__c.field-meta.xml
<CustomField>
        <fullName>Estimated_Purchase_Price__c</fullName>
        <label>Estimated Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>