unpackaged/main/default/objects/Lead/fields/Existing_Home_to_Sell__c.field-meta.xml
<CustomField>
        <fullName>Existing_Home_to_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Home to Sell</label>
        <type>Checkbox</type>
    </CustomField>