unpackaged/main/default/objects/Lead/fields/Exit_Open_Time_Dependent_Workflows__c.field-meta.xml
<CustomField>
        <fullName>Exit_Open_Time_Dependent_Workflows__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this checkbox is true then the lead will be kicked   out of any outstanding time-dependent workflows because it will be part of the criteria of the workflows.  During the custom convert, we will set this to true so that the lead can be converted</inlineHelpText>
        <label>Exit Open Time Dependent Workflows</label>
        <type>Checkbox</type>
    </CustomField>