unpackaged/main/default/objects/Lead/fields/FP_Name__c.field-meta.xml
<CustomField>
        <fullName>FP_Name__c</fullName>
        <label>FP Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>