unpackaged/main/default/objects/Lead/fields/Home_Onwer_Referral_Email__c.field-meta.xml
<CustomField>
        <fullName>Home_Onwer_Referral_Email__c</fullName>
        <label>Home Owner Referral Email</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>