unpackaged/main/default/objects/Lead/fields/Home_Owner_Referal_Name__c.field-meta.xml
<CustomField>
        <fullName>Home_Owner_Referal_Name__c</fullName>
        <label>Home Owner Referral Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>