unpackaged/main/default/objects/Lead/fields/How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Drive By</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Flyer/Brochure</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Google/Online Search</fullName>
                </value>
                <value>
                    <fullName>Internet Radio</fullName>
                </value>
                <value>
                    <fullName>Magazine Ad</fullName>
                </value>
                <value>
                    <fullName>Newspaper Ad</fullName>
                </value>
                <value>
                    <fullName>Online Ad</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Radio Ad</fullName>
                </value>
                <value>
                    <fullName>Real Estate Agent</fullName>
                </value>
                <value>
                    <fullName>Television Ad</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>