unpackaged/main/default/objects/Lead/fields/Hubspot_Lifecycle_Stage__c.field-meta.xml
<CustomField>
        <fullName>Hubspot_Lifecycle_Stage__c</fullName>
        <inlineHelpText>Set Lifecycle Stage to a predetermined value before cloning main lead</inlineHelpText>
        <label>Hubspot Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Evangelist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>