unpackaged/main/default/objects/Lead/fields/Hubspot_Original_Source__c.field-meta.xml
<CustomField>
        <fullName>Hubspot_Original_Source__c</fullName>
        <label>Hubspot Original Source</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>