unpackaged/main/default/objects/Lead/fields/Hubspot_Original_Source_Drill_Down_1__c.field-meta.xml
<CustomField>
        <fullName>Hubspot_Original_Source_Drill_Down_1__c</fullName>
        <label>Hubspot Original Source Drill-Down 1</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>