unpackaged/main/default/objects/Lead/fields/Internet_Sales_Rep__c.field-meta.xml
<CustomField>
        <fullName>Internet_Sales_Rep__c</fullName>
        <label>Internet Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>