unpackaged/main/default/objects/Lead/fields/Is_Hubspot_lead__c.field-meta.xml
<CustomField>
        <fullName>Is_Hubspot_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is  Hubspot lead</label>
        <type>Checkbox</type>
    </CustomField>