unpackaged/main/default/objects/Lead/fields/KT_Tribe__c.field-meta.xml
<CustomField>
        <fullName>KT_Tribe__c</fullName>
        <label>KT Tribe</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>