unpackaged/main/default/objects/Lead/fields/KTTribe_Quiz_BdayParty__c.field-meta.xml
<CustomField>
        <fullName>KTTribe_Quiz_BdayParty__c</fullName>
        <label>Your friends throw you a surprise b'day</label>
        <type>TextArea</type>
    </CustomField>