unpackaged/main/default/objects/Lead/fields/KTTribe_Quiz_Daytoself__c.field-meta.xml
<CustomField>
        <fullName>KTTribe_Quiz_Daytoself__c</fullName>
        <label>You have a day to yourself. You'll be</label>
        <type>TextArea</type>
    </CustomField>