unpackaged/main/default/objects/Lead/fields/KTTribe_Quiz_Dreamhome__c.field-meta.xml
<CustomField>
        <fullName>KTTribe_Quiz_Dreamhome__c</fullName>
        <label>Your dream home has..</label>
        <type>TextArea</type>
    </CustomField>