unpackaged/main/default/objects/Lead/fields/KTTribe_Quiz_Dreamjob__c.field-meta.xml
<CustomField>
        <fullName>KTTribe_Quiz_Dreamjob__c</fullName>
        <label>Your dream job</label>
        <type>TextArea</type>
    </CustomField>